--- a/mission_to_mars.ipynb
+++ b/mission_to_mars.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,8 @@
     "from bs4 import BeautifulSoup as bs\n",
     "from splinter import Browser\n",
     "import pandas as pd\n",
-    "import requests"
+    "import requests\n",
+    "import time"
    ]
   },
   {
@@ -51,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -119,16 +120,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "A Year of Surprising Science From NASA's InSight Mars Mission\n",
+      "The MarCO Mission Comes to an End\n",
       "-----------------\n",
-      "A batch of new papers summarizes the lander's findings above and below the surface of the Red Planet.\n"
+      "The pair of briefcase-sized satellites made history when they sailed past Mars in 2019.\n"
      ]
     }
    ],
@@ -137,7 +138,7 @@
     "title = soup.find('div', class_='content_title').find('a').text\n",
     "\n",
     "# scrape the article teaser paragraph\n",
-    "first_pp = soup.find('div', class_='article_teaser_body').text\n",
+    "first_pp = soup.find('div', class_='article_teaser_body').get_text()\n",
     "\n",
     "# print article data\n",
     "print(title)\n",
@@ -154,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,9 +166,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\shamct01\\AppData\\Local\\Continuum\\anaconda3\\envs\\PythonData\\lib\\site-packages\\splinter\\driver\\webdriver\\__init__.py:528: FutureWarning: browser.find_link_by_partial_text is deprecated. Use browser.links.find_by_partial_text instead.\n",
+      "  FutureWarning,\n"
+     ]
+    }
+   ],
    "source": [
     "# Use splinter to navigate the site and find the image url for the current Featured Mars Image \n",
     "# Make sure to find the image url to the full size .jpg image.\n",
@@ -176,14 +186,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "https://www.jpl.nasa.gov/spaceimages/images/mediumsize/PIA23446_ip.jpg\n"
+      "https://www.jpl.nasa.gov/spaceimages/images/mediumsize/PIA11591_ip.jpg\n"
      ]
     }
    ],
@@ -205,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,16 +226,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'InSight sol 442 (2020-02-23) low -94.1ºC (-137.3ºF) high -10.5ºC (13.0ºF)\\nwinds from the SSE at 6.2 m/s (13.8 mph) gusting to 21.1 m/s (47.3 mph)\\npressure at 6.30 hPa'"
+       "'InSight sol 445 (2020-02-26) low -92.8ºC (-135.0ºF) high -12.8ºC (8.9ºF)\\nwinds from the SSE at 5.9 m/s (13.3 mph) gusting to 21.1 m/s (47.3 mph)\\npressure at 6.30 hPa'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -245,7 +255,7 @@
     "        mars_weather = weather\n",
     "        break\n",
     "        \n",
-    "mars_weather"
+    "weather"
    ]
   },
   {
@@ -257,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -360,7 +370,7 @@
        "8          Recorded By:           Egyptian astronomers"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -375,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -445,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -456,23 +466,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'title': 'Cerberus Hemispher',\n",
-       "  'img_url': 'http://astropedia.astrogeology.usgs.gov/download/Mars/Viking/cerberus_enhanced.tif/full.jpg'},\n",
-       " {'title': 'Schiaparelli Hemispher',\n",
-       "  'img_url': 'http://astropedia.astrogeology.usgs.gov/download/Mars/Viking/schiaparelli_enhanced.tif/full.jpg'},\n",
-       " {'title': 'Syrtis Major Hemispher',\n",
-       "  'img_url': 'http://astropedia.astrogeology.usgs.gov/download/Mars/Viking/syrtis_major_enhanced.tif/full.jpg'},\n",
-       " {'title': 'Valles Marineris Hemispher',\n",
-       "  'img_url': 'http://astropedia.astrogeology.usgs.gov/download/Mars/Viking/valles_marineris_enhanced.tif/full.jpg'}]"
+       "[{'img_url': 'http://astropedia.astrogeology.usgs.gov/download/Mars/Viking/cerberus_enhanced.tif/full.jpg',\n",
+       "  'title': 'Cerberus Hemispher'},\n",
+       " {'img_url': 'http://astropedia.astrogeology.usgs.gov/download/Mars/Viking/schiaparelli_enhanced.tif/full.jpg',\n",
+       "  'title': 'Schiaparelli Hemispher'},\n",
+       " {'img_url': 'http://astropedia.astrogeology.usgs.gov/download/Mars/Viking/syrtis_major_enhanced.tif/full.jpg',\n",
+       "  'title': 'Syrtis Major Hemispher'},\n",
+       " {'img_url': 'http://astropedia.astrogeology.usgs.gov/download/Mars/Viking/valles_marineris_enhanced.tif/full.jpg',\n",
+       "  'title': 'Valles Marineris Hemispher'}]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -490,72 +500,16 @@
     "    hemi_dict = {}\n",
     "    \n",
     "    browser.find_by_css('a.product-item h3')[i].click()\n",
+    "    time.sleep(1)\n",
     "    hemi_url = browser.find_link_by_text('Sample').first\n",
     "    # Store the data using the keys img_url and title\n",
-    "    hemi_dict['title'] = browser.find_by_css('h2.title').text.strip(' Enhanced')\n",
     "    hemi_dict['img_url'] = hemi_url['href']\n",
+    "    hemi_dict['title'] = browser.find_by_css('h2.title').text.strip(' Enhanced')\n",
     "    mars_hemi.append(hemi_dict)\n",
     "    \n",
     "    browser.back()\n",
     "\n",
     "mars_hemi"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Step 2 - MongoDB and Flask Application"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Use MongoDB with Flask templating to create a new HTML page that displays all of the information that was scraped from the URLs above."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Start by converting your Jupyter notebook into a Python script called scrape_mars.py with a function\n",
-    "# called scrape that will execute all of your scraping code from above and return one Python dictionary containing all\n",
-    "# of the scraped data.\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Next, create a route called /scrape that will import your scrape_mars.py script and call your scrape function.\n",
-    "# Store the return value in Mongo as a Python dictionary.\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Create a root route / that will query your Mongo database and pass the mars data into an HTML template to display the data.\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Create a template HTML file called index.html that will take the mars data dictionary and display all of the data in the appropriate HTML elements.\n",
-    "# Use the following as a guide for what the final product should look like, but feel free to create your own design.\n",
-    "\n"
    ]
   }
  ],
